# dynamodb-client

./: README.md  pyproject.toml
dynamodb_client/: __init__.py  core.py
