[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamodb-client"
version = "0.1.0"
description = "DynamoDB utilities for AWS"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Viprasol", email = "hello@viprasol.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = []

[project.urls]
Homepage = "https://viprasol.com"
Repository = "https://github.com/Viprasol-Tech/dynamodb-client"
Issues = "https://github.com/Viprasol-Tech/dynamodb-client/issues"

[tool.setuptools]
packages = ["dynamodb_client"]
